--- a/assets/css/site/_1.1.2-object--nav.scss
+++ b/assets/css/site/_1.1.2-object--nav.scss
@@ -89,8 +89,7 @@
                 outline: none;
                 display: inline-block;
                 vertical-align: middle;
-                margin-right: $baseline-small;
-                font-family: 'gow', helvetica, 'arial black';
+                margin-right: 15px;
 
                 &:hover {
                     color: $kd-grey50;
