--- a/assets/css/site/_2.1-section--masthead.scss
+++ b/assets/css/site/_2.1-section--masthead.scss
@@ -42,7 +42,7 @@
                     outline: none;
                     display: inline-block;
                     vertical-align: middle;
-                    margin-right: $baseline-small;
+                    margin-right: 15px;
 
                     &:hover {
                         color: $white;
