--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -202,8 +202,10 @@ html, body {
 @media only screen and (max-width: 320px) {
   .feature--one-whole, .modal__grid .grid-item, #footend .form .logo, #footend .form .contact-form, #section-our-vision .figure__our-vision, #section-our-vision .our-vision, #section-services .services .one-half, #section-services .services .two-quarters, #section-services .services .three-sixths, #section-services .services .four-eighths, #section-services .services .five-tenths, #section-services .services .six-twelfths, #section-services .services .tabs .tabs__header li, .tabs .tabs__header #section-services .services li, #section-contact .section__branches .branch .figure__image, #section-contact .section__branches .branch .branch-info, .single-post .article,
   #page-id-212 .article,
+  #page-id-213 .article,
   #page-id-193 .article,
   #page-212 .article,
+  #page-213 .article,
   #page-193 .article {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 100%;
@@ -323,8 +325,10 @@ html, body {
 @media only screen and (min-width: 321px) and (max-width: 480px) {
   .mobile--one-whole, .modal__grid .grid-item, #footend .form .logo, #footend .form .contact-form, #section-our-vision .figure__our-vision, #section-our-vision .our-vision, #section-services .services .one-half, #section-services .services .two-quarters, #section-services .services .three-sixths, #section-services .services .four-eighths, #section-services .services .five-tenths, #section-services .services .six-twelfths, #section-services .services .tabs .tabs__header li, .tabs .tabs__header #section-services .services li, #section-contact .section__branches .branch .figure__image, #section-contact .section__branches .branch .branch-info, .single-post .article,
   #page-id-212 .article,
+  #page-id-213 .article,
   #page-id-193 .article,
   #page-212 .article,
+  #page-213 .article,
   #page-193 .article {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 100%;
@@ -449,8 +453,10 @@ html, body {
             flex: 0 0 100%; }
   .tablet--one-half, .tablet--two-quarters, .tablet--three-sixths, .tablet--four-eighths, .tablet--five-tenths, .tablet--six-twelfths, .single-post .article,
   #page-id-212 .article,
+  #page-id-213 .article,
   #page-id-193 .article,
   #page-212 .article,
+  #page-213 .article,
   #page-193 .article {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 50%;
@@ -3164,58 +3170,74 @@ figure {
   .container {
     padding: 0; } }
 
+#page-215,
 #page-206,
 #page-192,
 #page-195 {
   margin-top: 195px;
   background: #E6EBF1; }
+  #page-215 .entry-header h1,
   #page-206 .entry-header h1,
   #page-192 .entry-header h1,
   #page-195 .entry-header h1 {
-    font-size: 1.7em;
     margin: 0;
     display: block;
     padding: 80px 0 10px; }
+    #page-215 .entry-header h1 a,
     #page-206 .entry-header h1 a,
     #page-192 .entry-header h1 a,
     #page-195 .entry-header h1 a {
       color: #000A3F; }
+  #page-215 .entry-content a,
   #page-206 .entry-content a,
   #page-192 .entry-content a,
   #page-195 .entry-content a {
     color: #000A3F;
     font-weight: bold; }
+  #page-215 .entry-content .btn-blue,
   #page-206 .entry-content .btn-blue,
   #page-192 .entry-content .btn-blue,
   #page-195 .entry-content .btn-blue {
     color: #FFFFFF; }
+  #page-215 .button,
   #page-206 .button,
   #page-192 .button,
   #page-195 .button {
     margin: 40px auto; }
+  #page-215 .apss-social-share,
+  #page-206 .apss-social-share,
+  #page-192 .apss-social-share,
+  #page-195 .apss-social-share {
+    display: none; }
   @media only screen and (min-width: 481px) and (max-width: 1023px) {
+    #page-215,
     #page-206,
     #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-215 .container,
       #page-206 .container,
       #page-192 .container,
       #page-195 .container {
         margin: 20px; } }
   @media only screen and (min-width: 321px) and (max-width: 480px) {
+    #page-215,
     #page-206,
     #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-215 .container,
       #page-206 .container,
       #page-192 .container,
       #page-195 .container {
         margin: 20px; } }
   @media only screen and (max-width: 320px) {
+    #page-215,
     #page-206,
     #page-192,
     #page-195 {
       margin-top: 100px; }
+      #page-215 .container,
       #page-206 .container,
       #page-192 .container,
       #page-195 .container {
@@ -3228,70 +3250,105 @@ figure {
     max-width: 100%;
     height: auto; }
 
+.page-id-213,
 .page-id-212 {
   background: #000A3F;
   height: auto;
   margin: 0; }
+  .page-id-213 h1,
   .page-id-212 h1 {
     display: block;
     color: #FFFFFF; }
+    .page-id-213 h1 a,
+    .page-id-212 h1 a {
+      color: #FFFFFF; }
+      .page-id-213 h1 a:hover,
+      .page-id-212 h1 a:hover {
+        color: #FFFFFF; }
+  .page-id-213 .container,
+  .page-id-212 .container {
+    margin-bottom: 40px; }
+    .page-id-213 .container .btn-back,
+    .page-id-212 .container .btn-back {
+      background: #BBC5CE; }
+      .page-id-213 .container .btn-back:hover,
+      .page-id-212 .container .btn-back:hover {
+        background: #E6EBF1; }
 
 .single-post,
 #page-id-212,
+#page-id-213,
 #page-id-193,
 #page-212,
+#page-213,
 #page-193 {
   margin: 0;
   margin-top: 240px; }
   .single-post .articles,
   #page-id-212 .articles,
+  #page-id-213 .articles,
   #page-id-193 .articles,
   #page-212 .articles,
+  #page-213 .articles,
   #page-193 .articles {
     padding-bottom: 40px; }
   .single-post .article,
   #page-id-212 .article,
+  #page-id-213 .article,
   #page-id-193 .article,
   #page-212 .article,
+  #page-213 .article,
   #page-193 .article {
     position: relative;
     overflow: hidden; }
   @media only screen and (min-width: 481px) and (max-width: 1023px) {
     .single-post,
     #page-id-212,
+    #page-id-213,
     #page-id-193,
     #page-212,
+    #page-213,
     #page-193 {
       margin-top: 100px; }
       .single-post .container,
       #page-id-212 .container,
+      #page-id-213 .container,
       #page-id-193 .container,
       #page-212 .container,
+      #page-213 .container,
       #page-193 .container {
         margin: 20px; } }
   @media only screen and (min-width: 321px) and (max-width: 480px) {
     .single-post,
     #page-id-212,
+    #page-id-213,
     #page-id-193,
     #page-212,
+    #page-213,
     #page-193 {
       margin-top: 100px; }
       .single-post .container,
       #page-id-212 .container,
+      #page-id-213 .container,
       #page-id-193 .container,
       #page-212 .container,
+      #page-213 .container,
       #page-193 .container {
         margin: 20px; } }
   @media only screen and (max-width: 320px) {
     .single-post,
     #page-id-212,
+    #page-id-213,
     #page-id-193,
     #page-212,
+    #page-213,
     #page-193 {
       margin-top: 100px; }
       .single-post .container,
       #page-id-212 .container,
+      #page-id-213 .container,
       #page-id-193 .container,
       #page-212 .container,
+      #page-213 .container,
       #page-193 .container {
         margin: 20px; } }
