blog pager, contacts fix

--- a/assets/css/site/_2.7-section--contact.scss
+++ b/assets/css/site/_2.7-section--contact.scss
@@ -43,7 +43,7 @@
                 @extend .mobile--one-whole;
                 @extend .feature--one-whole;
                 
-                .wrapper { margin: 0 $baseline;
+                .branch-wrapper { margin: 0 $baseline;
                     
                     h3, p, div { color: $white; }
                     
