--- a/assets/css/site/_1.1-object--global.scss
+++ b/assets/css/site/_1.1-object--global.scss
@@ -39,6 +39,20 @@ img.alignright  { float: right; margin-left: $baseline; }
 
 // A.1.2. END
 
+
+// PAGER 
+
+.pager { width: 100%; clear: both; padding: $baseline 0;
+    
+    li { list-style-type: none; display: inline-block;
+        
+        a { }
+    
+    }
+}
+
+
+
 // A.1.3. DROPDOWNS
 
 .dropdown {
@@ -82,6 +96,10 @@ figure { margin: 0; padding: 0; }
     padding: $baseline-small $baseline;
     
     &.btn-blue { background: $kd-royal; color: $white;
+        &:hover { color: $white; background: $kd-mauve; }
+    }
+        
+    &.btn-grey { background: $kd-grey30; color: $kd-royal;
         &:hover { color: $white; background: $kd-mauve; }
     }
     
